src/objects/Meeting__c.object
<CustomObject>
    <description>Used to track U.S Suppliers and Foreign Buyers meetings at Trade Events.</description>
    <fields>
        <fullName>AttendeeAgenda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agenda of the Meeting&apos;s Attendee.</description>
        <inlineHelpText>Agenda of the Meeting&apos;s Attendee.</inlineHelpText>
        <label>Attendee Agenda</label>
        <referenceTo>Agenda__c</referenceTo>
        <relationshipLabel>Meetings (Attendee Agenda)</relationshipLabel>
        <relationshipName>Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AttendeeCompany__c</fullName>
        <description>Autopopulated from the Attendee&apos;s record, U.S. Supplier for example.</description>
        <formula>Attendee__r.Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autopopulated from the Attendee&apos;s record, U.S. Supplier for example.</inlineHelpText>
        <label>Attendee Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee_Name__c</fullName>
        <description>Attendee first name &amp; last name.</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Attendee__r.Id ,Attendee__r.FirstName__c &amp; &quot; &quot; &amp;  Attendee__r.LastName__c)</formula>
        <inlineHelpText>Attendee first name &amp; last name.</inlineHelpText>
        <label>Attendee Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attendee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The participant of the meeting, like a foreign buyer.</description>
        <inlineHelpText>The participant of the meeting, like a foreign buyer.</inlineHelpText>
        <label>Attendee</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BusinessConference__c</fullName>
        <description>Establishes master- detail relationship between attendee and business conference.</description>
        <inlineHelpText>Establishes master- detail relationship between attendee and business conference.</inlineHelpText>
        <label>Business Conference</label>
        <referenceTo>Business_Conference__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EndDateTime__c</fullName>
        <description>The time the meeting will end.</description>
        <inlineHelpText>The time the meeting will end.</inlineHelpText>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>EventtiaID__c</fullName>
        <description>External ID for the Eventtia Meeting ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>External ID for the Eventtia Meeting ID.</inlineHelpText>
        <label>Eventtia ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>HostAgenda__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Agenda of the Meeting&apos;s Host Attendee.</description>
        <inlineHelpText>Agenda of the Meeting&apos;s Host Attendee.</inlineHelpText>
        <label>Host Agenda</label>
        <referenceTo>Agenda__c</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HostCompany__c</fullName>
        <description>Autopopulated from the Host&apos;s attendee record, U.S. Supplier for example.</description>
        <formula>Host__r.Company__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Autopopulated from the Host&apos;s attendee record, U.S. Supplier for example.</inlineHelpText>
        <label>Host Company</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host_Name__c</fullName>
        <description>Host first name &amp; last name</description>
        <formula>HYPERLINK(&quot;/&quot; &amp; Host__r.Id , Host__r.FirstName__c &amp; &quot; &quot; &amp; Host__r.LastName__c)</formula>
        <inlineHelpText>Host first name &amp; last name</inlineHelpText>
        <label>Host Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Host__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The host of the meeting.</description>
        <inlineHelpText>The host of the meeting.</inlineHelpText>
        <label>Host</label>
        <referenceTo>Attendee__c</referenceTo>
        <relationshipLabel>Meetings (Host)</relationshipLabel>
        <relationshipName>Meetings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>The location of the meeting (optional).</description>
        <inlineHelpText>The location of the meeting (optional).</inlineHelpText>
        <label>Location</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RelatedCase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Case related to this meeting. This case is created during the WEFTEC Pre-Registration process.</description>
        <inlineHelpText>Case related to this meeting. This case is created during the WEFTEC Pre-Registration process.</inlineHelpText>
        <label>Related Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Meetings</relationshipLabel>
        <relationshipName>Meetings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>StartDateTime__c</fullName>
        <description>The time the meeting will begin.</description>
        <inlineHelpText>The time the meeting will begin.</inlineHelpText>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the meeting. Whether or not it&apos;s been requested, accepted, or rejected.</description>
        <inlineHelpText>The status of the meeting. Whether or not it&apos;s been requested, accepted, or rejected.</inlineHelpText>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of meeting.</description>
        <inlineHelpText>The type of meeting.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>B2B</fullName>
                </value>
                <value>
                    <fullName>B2G</fullName>
                </value>
                <value>
                    <fullName>Demo</fullName>
                    <isActive>false</isActive>
                    <label>Demo</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Meeting</label>
    <listViews>
        <fullName>Accepted_Meetings</fullName>
        <columns>NAME</columns>
        <columns>HostCompany__c</columns>
        <columns>Host_Name__c</columns>
        <columns>AttendeeCompany__c</columns>
        <columns>Attendee_Name__c</columns>
        <columns>StartDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>accepted</value>
        </filters>
        <label>Accepted Meetings</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>HostCompany__c</columns>
        <columns>Host_Name__c</columns>
        <columns>AttendeeCompany__c</columns>
        <columns>Attendee_Name__c</columns>
        <columns>StartDateTime__c</columns>
        <columns>Status__c</columns>
        <columns>BusinessConference__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>B2B_Meetings</fullName>
        <columns>NAME</columns>
        <columns>Attendee_Name__c</columns>
        <columns>AttendeeCompany__c</columns>
        <columns>Host_Name__c</columns>
        <columns>HostCompany__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>B2B</value>
        </filters>
        <label>B2B Meetings</label>
    </listViews>
    <listViews>
        <fullName>G2B_Meetings</fullName>
        <columns>NAME</columns>
        <columns>AttendeeCompany__c</columns>
        <columns>Attendee_Name__c</columns>
        <columns>HostCompany__c</columns>
        <columns>Host_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>G2B Meetings</label>
    </listViews>
    <listViews>
        <fullName>Rejected_Meetings</fullName>
        <columns>NAME</columns>
        <columns>HostCompany__c</columns>
        <columns>Host_Name__c</columns>
        <columns>AttendeeCompany__c</columns>
        <columns>Attendee_Name__c</columns>
        <columns>StartDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>rejected</value>
        </filters>
        <label>Rejected Meetings</label>
    </listViews>
    <listViews>
        <fullName>Requested_Meetings</fullName>
        <columns>NAME</columns>
        <columns>HostCompany__c</columns>
        <columns>Host_Name__c</columns>
        <columns>AttendeeCompany__c</columns>
        <columns>Attendee_Name__c</columns>
        <columns>StartDateTime__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>requested</value>
        </filters>
        <label>Requested Meetings</label>
    </listViews>
    <nameField>
        <displayFormat>M-{000}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>